# gipan

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Makefile  README.md  docker-entry.sh
.github/workflows/: ci.yml
configs/: oraksil-prod-sa.json
ctrl/: Cargo.toml
ctrl/src/: main.rs
libemu/: Cargo.toml
libemu/include/: headless.h
libemu/src/: bindings.rs  build.rs  lib.rs  utils.rs
libenc/: Cargo.toml
libenc/src/: lib.rs  utils.rs
src/: encoder.rs  main.rs  roms.rs  utils.rs
