[package]
name = "gipan"
version = "0.1.0"
authors = ["gamz <gamzabaw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atoi = "0.3.2"

nanomsg = "0.7.2"
crossbeam-channel = "0.4"

libemu = { path = "libemu" }
libenc = { path = "libenc" }
