[package]
name = "gipan"
version = "0.1.0"
authors = ["gamz <gamzabaw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

nanomsg = "0.7.2"
crossbeam-channel = "0.4"
reqwest = { version = "0.10", features = ["blocking", "json"] }
cloud-storage = "0.4"
rust-s3 = "0.26.3"

libemu = { path = "libemu" }
libenc = { path = "libenc" }
