[package]
name = "libemu"
version = "0.1.0"
build = "src/build.rs"
authors = ["gamz <gamzabaw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.2"
libc = "0.2.6"
lazy_static = "1.4.0"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
pkg-config = "0.3"