[package]
name = "libenc"
version = "0.1.0"
build = "src/build.rs"
authors = ["gamz <gamzabaw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
av-data = "0.2"
av-codec = "0.2"
av-format = "0.2"

libvpx = { git = "https://github.com/rust-av/vpx-rs", features = ["codec-trait"] }
libopus = { git = "https://github.com/rust-av/opus-rs.git", features = ["codec-trait"] }
