[package]
name = "libenc"
version = "0.1.0"
build = "src/build.rs"
authors = ["gamz <gamzabaw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
av-data = "0.2"
av-codec = "0.2"
av-format = "0.2"

libvpx = { git = "https://github.com/rust-av/vpx-rs.git", rev = "f2ddb04", features = ["codec-trait"] }
x264 = { git = "https://github.com/rust-av/x264-rs.git", rev = "f0e45fe" }
libopus = { git = "https://github.com/rust-av/opus-rs.git", rev = "9f72023", features = ["codec-trait"] }